--- a/.gitignore
+++ b/.gitignore
@@ -259,3 +259,6 @@ paket-files/
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
 *.pyc
+WindowsFormsApp1/.vs/WindowsFormsApp1/v16/.suo
+WindowsFormsApp1/.vs/WindowsFormsApp1/v16/Server/sqlite3/storage.ide
+WindowsFormsApp1/.vs/WindowsFormsApp1/v16/.suo
