--- a/homework11/homework11frame/packages.config
+++ b/homework11/homework11frame/packages.config
@@ -29,6 +29,7 @@
   <package id="Microsoft.Extensions.Options" version="3.1.3" targetFramework="net461" />
   <package id="Microsoft.Extensions.Primitives" version="3.1.3" targetFramework="net461" />
   <package id="MySql.Data" version="8.0.20" targetFramework="net461" />
+  <package id="MySql.Data.Entity" version="6.10.9" targetFramework="net472" />
   <package id="MySql.Data.EntityFramework" version="8.0.20" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
   <package id="SQLitePCLRaw.bundle_e_sqlite3" version="2.0.2" targetFramework="net461" />
